# cubrid

./: .appveyor.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD_NUMBER  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  CREDITS  Jenkinsfile  Makefile.am  README  README.md  VERSION  acinclude.m4  autobuild.cmd  autobuild_aix.cmd  autogen.sh  build.sh  c_to_cpp.sh  circle.yml  config.h.cmake  configure  configure.ac  csql.access  csql.err  run_scalability_unit_tests.sh  version.h.cmake
broker/: CMakeLists.txt  Makefile.am  uc
cas/: CMakeLists.txt  Makefile.am
cas4mysql/: Makefile.am
cas4oracle/: Makefile.am
cci/: CMakeLists.txt  Makefile.am
cm_common/: CMakeLists.txt  Makefile.am
cmserver/: Makefile.am
cmserver/conf/: Makefile.am  cm.conf
conf/: CMakeLists.txt  Makefile.am  cas_ssl_cert.crt  cas_ssl_cert.key  cubrid.conf  cubrid.conf.large  cubrid.conf.small  cubrid.conf.test  cubrid_broker.conf  cubrid_broker.conf.shard  cubrid_de_DE.xml  cubrid_es_ES.xml  cubrid_fr_FR.xml  cubrid_gateway.conf  cubrid_ha.conf  cubrid_hosts.conf  cubrid_it_IT.xml  cubrid_ja_JP.xml  cubrid_km_KH.xml  cubrid_ko_KR.xml  cubrid_locales.all.txt  cubrid_locales.txt  cubrid_tr_TR.xml  cubrid_vi_VN.xml  cubrid_zh_CN.xml  hosts.conf  shard.conf  shard_connection.txt  shard_key.txt
contrib/: CMakeLists.txt  Makefile.am
contrib/bash/: csql  cubrid
contrib/cci_applier/: Makefile
contrib/cloud/: Dockerfile  README.md  build.sh  cubrid-statefulset.yaml  docker_build.sh
contrib/collectd-plugin/: Makefile  README  a.c  cubrid_broker.c  cubrid_broker.h  cubrid_config.h  cubrid_ha.c  cubrid_ha.h  cubrid_statdump.c  cubrid_statdump.h
contrib/coverage/: README  coverage_example.xcov  genhtml  mkcoverage  parsediff  xcov  xcov.conf  xcov.tgz
contrib/creview/: README  code_review  code_review.bat  mkcreview
contrib/cubmemc/: 00README
contrib/gdb_debugging_scripts/: disk_manager.gdb  file_manager.gdb  heap.gdb  lc_classname.gdb  lock_free.gdb  lock_manager.gdb  log_records.gdb  page_buffer.gdb  perfmon.gdb  perfomn.gdb  representation.gdb  slotted_page.gdb  thread_id_index.py  thread_tran.gdb  vacuum.gdb  work_space.gdb
contrib/getshardid/: Makefile  get_shard_id.c
contrib/heartbeat/: README.M2  README.nton
contrib/hibernate/: CUBRIDDialect.java
contrib/init.d/: cubrid  cubrid-ha
contrib/install/: install.sh
contrib/migrate/: Makefile  migrate.c  migrate.h
contrib/nbench2/: build.xml
contrib/oledb/: BUILD_NUMBER  CUBRIDProvider.sln
contrib/perl/: Changes  INSTALL.html  MANIFEST  META.yml  Makefile.PL  README  cubrid.h  cubrid.pm  cubrid.xs  dbdimp.c  dbdimp.h
contrib/php/: BUILD_NUMBER  INSTALL
contrib/php4/: INSTALL
contrib/php5/: README  build-guide.html  config.m4  config.w32  php_cubrid.c  php_cubrid.dsp  php_cubrid.h  php_cubrid_version.h  release-notes.html
contrib/pystatdump/: README.md  pystatdump.py
contrib/python/: HISTORY  README  README_django_cubrid  _cubrid_exceptions.py  cubrid.h  dbapi20.py  python_cubrid.c  python_cubrid.h  setup.py  test_CUBRIDdb.py  test_cubrid.py  test_cubrid_dbapi20.py
contrib/python-obsolete/: README  conn.c  cubrid.c  cubrid.h  cubriddb.py  cursor.c  oid.c  setup.py  test_cubrid.py
contrib/readme/: README_SOCK.txt  README_TAR_INSTALL  README_TMP.txt  databases.txt.sample
contrib/rpm/: cubrid.csh  cubrid.sh  cubrid.spec
contrib/scripts/: addmsg.py  broker_log_top.py  brokerstatus_to_csv.py  check_duplications.sh  check_index_ovfps.sh  check_oid_ovfps.sh  check_reserved.sql  cubrid.csh  cubrid.sh  setup.sh  statdump_to_csv.py  unloaddb.sh
contrib/scripts_for_msi/: create_for_databases.bat  make_demo_msi.bat
contrib/systemtap/: Makefile.am  configure.gnu  cubrid_func.stp  probes.d
contrib/windows_scripts/: cubrid_env.bat
cs/: CMakeLists.txt  Makefile.am
cubrid/: CMakeLists.txt  Makefile.am
cubridmanager/: .classpath  .project  Makefile  Makefile.am  Makefile.am.old  build-user.xml  build.properties  build.xml  configuration.ini  cubridmanager.product  messages.properties  messages_en_US.properties  messages_ko_KR.properties  plugin.properties  plugin.xml  plugin_ko_KR.properties  splash.pdn  version.properties
cubridmanager/com.cubrid.cubridmanager.app/: .project  build.properties  cubridmanager.product  plugin.properties  plugin.xml  plugin_ko_KR.properties
cubridmanager/com.cubrid.cubridmanager.app.feature/: .project  build.properties  feature.xml
cubridmanager/com.cubrid.cubridmanager.build/: .project  Makefile  Makefile.am  build.properties  build.xml
cubridmanager/com.cubrid.cubridmanager.buildandtest/: .project  build.bat  build.sh  build.xml  build_local.properties  pluginbuilder.config
cubridmanager/com.cubrid.cubridmanager.core/: .classpath  .project  build.properties  log4j.properties
cubridmanager/com.cubrid.cubridmanager.core.testfragment/: .project  build.properties
cubridmanager/com.cubrid.cubridmanager.help/: .project  build.properties  cubridManual.xml  cubridmanager.xml  dynamicHelp.xml  plugin.xml  quickExample.xml
cubridmanager/com.cubrid.cubridmanager.plugin/: .project  build.properties  plugin.properties  plugin.xml
cubridmanager/com.cubrid.cubridmanager.plugin.feature/: .project  feature.xml
cubridmanager/com.cubrid.cubridmanager.testfeature/: .project  feature.xml
cubridmanager/com.cubrid.cubridmanager.ui/: .classpath  .project  build.properties  plugin.properties  plugin.xml  plugin_ko_KR.properties  version.properties
cubridmanager/com.cubrid.cubridmanager.ui.testfragment/: .project  build.properties  fragment.xml
cubridmanager/rcpfiles/: config.ini.linux  config.ini.linux.gtk  config.ini.sun  config.ini.win32  launcher.gtk.sh  launcher.linux  launcher.sh  (+3 more)
dbgw/: Makefile.am
dbmt/: Makefile.am
demo/: CMakeLists.txt  Makefile.am  SpOIDSet.java  SpPrepareTest.java  SpTypeTest.java  TestResultSet.java  demodb_objects  demodb_schema  make_cubrid_demo.bat  make_cubrid_demo.sh  test_method.c  test_method.ec
include/: Makefile.am  system.h
java/: CMakeLists.txt  Makefile.am  build.xml
(+8036 files in other folders)
